cargo-features = ['rename-dependency']

[package]
name = "dlmalloc"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
doctest = false
test = false

[target.'cfg(all(unix, not(target_arch = "wasm32")))'.dependencies]
libc = { version = "0.2", default-features = false }

[dependencies]
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.0', optional = true }

[dev-dependencies]
rand = "0.3"

[profile.release]
debug-assertions = true

[features]
debug = []
allocator-api = []
rustc-dep-of-std = ['core', 'compiler_builtins/rustc-dep-of-std']
